--- a/index.html
+++ b/index.html
@@ -7,53 +7,86 @@
     <title>Quiz App</title>
   </head>
   <body>
-   
     <div class="main">
       <h1 id="app">QUIZ APP</h1>
       <div class="box" id="box">
         <h2>this is question about computer programming</h2>
         <div id="answer">
           <div class="option">
-            <input type="radio" id="option1" class="options" value="a" name="option" />
+            <input
+              type="radio"
+              id="option1"
+              class="options"
+              value="a"
+              name="option"
+            />
             <label for="option1" id="answers">option 1</label>
           </div>
-          <div class="option" >
-            <input type="radio" id="option2" class="options" value="b" name="option"/>
+          <div class="option">
+            <input
+              type="radio"
+              id="option2"
+              class="options"
+              value="b"
+              name="option"
+            />
             <label for="option2" id="answers">option 2</label>
           </div>
           <div class="option">
-            <input type="radio" id="option3" class="options" value="c" name="option"/>
+            <input
+              type="radio"
+              id="option3"
+              class="options"
+              value="c"
+              name="option"
+            />
             <label for="option3" id="answers">option 3</label>
           </div>
           <div class="option">
-            <input type="radio" id="option4" class="options" value="b" name="option"/>
+            <input
+              type="radio"
+              id="option4"
+              class="options"
+              value="b"
+              name="option"
+            />
             <label for="option4" id="answers">option 4</label>
           </div>
         </div>
-            <div class="result">
-                <button onclick="submit()">
-                    Submit
-                </button>
-                <div id="chkans"></div>
-                <p id="right"></p> 
-            </div>
-
+        <div class="result">
+          <button onclick="submit()">Submit</button>
+          <div id="chkans"></div>
+          <p id="right"></p>
+        </div>
       </div>
       <div class="results display">
-        <h1>The Result of Your Quiz is  Following!</h1>
+        <h1>The Result of Your Quiz is Following!</h1>
         <ul>
-       <div class="li1"></div> <li class="li"></li>
-       <div class="li2"></div> <li class="li"></li>
-       <div class="li3"></div> <li class="li"></li>
-      </ul>
-      <button onclick="allAnswers();">Answers</button>
+          <div class="li1"></div>
+          <li class="li"></li>
+          <div class="li2"></div>
+          <li class="li"></li>
+          <div class="li3"></div>
+          <li class="li"></li>
+        </ul>
+        <button onclick="allAnswers();">Answers</button>
       </div>
       <ul id="pp">
-        <li><h1>Following are Answers of Questions </h1></li>
-      </ul> 
+        <li><h1>Following are Answers of Questions</h1></li>
+      </ul>
+      <!-- <div class="correctAns"> -->
+        <!-- <ul id="correctAns">
+          <li><h1>Following are Correct Questions of You</h1></li>
+          <Li>jhsd</Li>
+          <li>sbdm</li>
+          <li>sdn,sbman,</li>
+          <li>vsdmn,</li>
+          <li>asbdjkge</li>
+        </ul> -->
+      <!-- </div> -->
     </div>
-   
-   
+    
+
     <script src="app.js"></script>
   </body>
 </html>
